<?xml version="1.0"?>
<package format="2">
  <name>rtr_choreonoid_pkgs</name>
  <version>0.1.0</version>
  <description>The rtr_choreonoid_pkgs package</description>

  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>

  <license>BSD</license>

  <url type="repository">http://gitlab.com/rogiken-tnk-ros/rtr_choreonoid_pkgs</url>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>choreonoid</exec_depend>
  <exec_depend>choreonoid_ros_pkgs</exec_depend>
  <exec_depend>rtr_choreonoid</exec_depend>
  <exec_depend>wrs_projects</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
